--- a/ClinicaVeterinaria/src/main/resources/static/css/comun.css
+++ b/ClinicaVeterinaria/src/main/resources/static/css/comun.css
@@ -1,10 +1,11 @@
-/* ===== HEADER ===== */
+/* ESTILOS GENERALES PARA TODAS LAS PAGINAS */
+
 header {
     position: fixed;
-    /* Fijo arriba */
     width: 100%;
     top: 0;
     left: 0;
+    height: 70px;
     z-index: 1000;
     background-color: rgba(46, 139, 87, 0.9);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -35,10 +36,19 @@ header {
     font-weight: bold;
 }
 
-/* ===== FOOTER (EL QUE NOS INTERESA) ===== */
 footer {
     background-color: #2e8b57;
     color: white;
     text-align: center;
     padding: 30px;
 }
+
+body {
+    margin: 0;
+    padding-top: 70px;
+}
+
+main.container {
+    min-height: calc(100vh - 140px);
+}
+
