--- a/ClinicaVeterinaria/src/main/resources/static/css/tienda.css
+++ b/ClinicaVeterinaria/src/main/resources/static/css/tienda.css
@@ -1,4 +1,4 @@
-/* ===== TÍTULO DE LA TIENDA ===== */
+
 .section h2 {
     font-size: 36px;
     margin-bottom: 20px;
@@ -12,7 +12,6 @@
     margin: 0 auto;
 }
 
-/* ===== TARJETAS DE PRODUCTOS ===== */
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -30,24 +29,22 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Efecto hover suave */
 .card:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
 }
 
-/* Nombre del producto */
 .card h3 {
     font-size: 22px;
     margin-bottom: 15px;
 }
 
-/* Precio */
+/* PRECIO */
 .card strong {
     display: block;
     margin-top: 15px;
     font-size: 20px;
-    color: #2e8b57; /* Verde corporativo */
+    color: #2e8b57;
 }
 
 /* Stock */
@@ -55,16 +52,18 @@
     font-weight: bold;
 }
 
-/* Imagen del producto */
+/* IMAGEN DE CADA UNO */
+
 .producto-img {
     width: 100%;
     height: 180px;
-    object-fit: cover; /* evita deformar la imagen */
+    object-fit: cover;
     border-radius: 8px;
     margin-bottom: 15px;
 }
 
-/* Botón detalle */
+/* BOTON PARA VERLO EN DETALLE */
+
 .btn-detalle {
     display: inline-block;
     margin-top: 15px;
