--- a/ClinicaVeterinaria/src/main/resources/templates/fragments/header.html
+++ b/ClinicaVeterinaria/src/main/resources/templates/fragments/header.html
@@ -1,18 +1,49 @@
-<header th:fragment="header">
-  <nav class="navbar">
-    <div class="container-nav">
+<!-- HEADER COMUN -->
 
-      <div class="logo">
-        <h2>Clínica Fran</h2>
-      </div>
+<header th:fragment="header" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+    <nav class="navbar">
+        <div class="container-nav">
 
-      <ul class="nav-links">
-        <li><a th:href="@{/}">Inicio</a></li>
-        <li><a th:href="@{/tienda}">Tienda Online</a></li>
-        <li><a th:href="@{/cita}">Pedir Cita</a></li>
-        <li><a th:href="@{/noticias}">Noticias</a></li>
-      </ul>
+            <div class="logo">
+                <h2>Clínica Fran</h2>
+            </div>
 
-    </div>
-  </nav>
+            <ul class="nav-links">
+                <li><a th:href="@{/}">Inicio</a></li>
+                <li><a th:href="@{/tienda}">Tienda Online</a></li>
+                <li><a th:href="@{/cita}">Pedir Cita</a></li>
+                <li><a th:href="@{/noticias}">Noticias</a></li>
+
+                <!-- LO QUE SE MUESTRA CUANDO EL USUARIO NO SE HA REGISTRADO -->
+
+                <li sec:authorize="!isAuthenticated()">
+                    <a th:href="@{/login}">Iniciar Sesión</a>
+                </li>
+                <li sec:authorize="!isAuthenticated()">
+                    <a th:href="@{/registro}">Registro</a>
+                </li>
+
+                <!-- LO QUE SE MUESTRA CUANDO EL USUARIO SI SE HA REGISTRADO -->
+
+                <li sec:authorize="isAuthenticated()">
+          <span style="color: white; font-weight: bold;">
+            ¡Hola, <span sec:authentication="name"></span>!
+          </span>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <a th:href="@{/carrito}">🛒 Carrito</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <form th:action="@{/logout}" method="post" style="display: inline;">
+                        <button type="submit"
+                                style="background: none; border: none; color: white; font-weight: bold; cursor: pointer; font-size: 16px;">
+                            Cerrar Sesión
+                        </button>
+                    </form>
+                </li>
+
+            </ul>
+
+        </div>
+    </nav>
 </header>
