--- a/ClinicaVeterinaria/src/main/resources/static/css/comun.css
+++ b/ClinicaVeterinaria/src/main/resources/static/css/comun.css
@@ -1,5 +1,12 @@
 /* ESTILOS GENERALES PARA TODAS LAS PAGINAS */
 
+body {
+    margin: 0;
+    padding-top: 70px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 header {
     position: fixed;
     width: 100%;
@@ -51,4 +58,50 @@ body {
 main.container {
     min-height: calc(100vh - 140px);
 }
+
+/* BOTONES ADMIN (PRODUCTOS Y NOTICIAS) */
+
+.btn-crear {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #3498db;
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: bold;
+}
+
+.btn-editar {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #f39c12;
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: bold;
+}
+
+.btn-borrar {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #e74c3c;
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: bold;
+}
+
+.btn-crear:hover {
+    background-color: #2c80b4;
+}
+
+.btn-editar:hover {
+    background-color: #d68910;
+}
+
+.btn-borrar:hover {
+    background-color: #c0392b;
+}
+
+
 
