--- a/ClinicaVeterinaria/src/main/resources/templates/detalle-producto.html
+++ b/ClinicaVeterinaria/src/main/resources/templates/detalle-producto.html
@@ -6,7 +6,7 @@
     <title th:text="${producto.nombre}">Detalle producto</title>
 
     <link rel="stylesheet" th:href="@{/css/comun.css}">
-    <link rel="stylesheet" th:href="@{/css/tienda.css}">
+    <link rel="stylesheet" th:href="@{/css/detalle-producto.css}">
 </head>
 
 <body>
