--- a/ClinicaVeterinaria/src/main/resources/static/css/tienda.css
+++ b/ClinicaVeterinaria/src/main/resources/static/css/tienda.css
@@ -1,4 +1,3 @@
-
 .section h2 {
     font-size: 36px;
     margin-bottom: 20px;
@@ -56,6 +55,7 @@
 
 .producto-img {
     width: 100%;
+    max-width: 220px;
     height: 180px;
     object-fit: cover;
     border-radius: 8px;
@@ -77,4 +77,33 @@
 
 .btn-detalle:hover {
     background-color: #256f46;
+}
+
+/* FILTRO POR CATEGORIAS */
+
+.filtro-categorias {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-bottom: 30px;
+}
+
+.btn-filtro {
+    padding: 10px 25px;
+    border: 2px solid #2e8b57;
+    border-radius: 25px;
+    text-decoration: none;
+    color: #2e8b57;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+
+.btn-filtro:hover {
+    background-color: #2e8b57;
+    color: white;
+}
+
+.btn-filtro.activo {
+    background-color: #2e8b57;
+    color: white;
 }
