--- a/ClinicaVeterinaria/src/main/resources/templates/agregar-producto.html
+++ b/ClinicaVeterinaria/src/main/resources/templates/agregar-producto.html
@@ -2,71 +2,69 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Nuevo producto</title>
+   <meta charset="UTF-8">
+   <title>Nuevo producto</title>
 
-    <link rel="stylesheet" th:href="@{/css/comun.css}">
-    <link rel="stylesheet" th:href="@{/css/tienda.css}">
+   <link rel="stylesheet" th:href="@{/css/comun.css}">
+   <link rel="stylesheet" th:href="@{/css/tienda.css}">
 </head>
 
 <body>
 
-<div th:replace="fragments/header :: header"></div>
+   <div th:replace="fragments/header :: header"></div>
 
-<section class="section white">
+   <section class="section white">
 
-    <div class="container">
+      <div class="container">
 
-        <h2>Añadir nuevo producto</h2>
+         <h2>Añadir nuevo producto</h2>
 
-        <form th:action="@{/tienda/nuevo}"
-              th:object="${producto}"
-              method="post"
-              class="card">
+         <form th:action="@{/tienda/nuevo}" th:object="${producto}" method="post" class="card">
 
             <label>Nombre</label>
             <input type="text" th:field="*{nombre}">
-            <p th:if="${#fields.hasErrors('nombre')}"
-               th:errors="*{nombre}">
+            <p th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}">
             </p>
 
             <label>Descripción</label>
             <textarea th:field="*{descripcion}"></textarea>
-            <p th:if="${#fields.hasErrors('descripcion')}"
-               th:errors="*{descripcion}">
+            <p th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}">
             </p>
 
             <label>Precio</label>
             <input type="number" step="0.01" th:field="*{precio}">
-            <p th:if="${#fields.hasErrors('precio')}"
-               th:errors="*{precio}">
+            <p th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}">
             </p>
 
             <label>Stock</label>
             <input type="number" th:field="*{stock}">
-            <p th:if="${#fields.hasErrors('stock')}"
-               th:errors="*{stock}">
+            <p th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}">
             </p>
 
             <label>Imagen (ruta)</label>
-            <input type="text"
-                   th:field="*{imagen}"
-                   placeholder="piensos/pienso_perro.jpg">
-            <p th:if="${#fields.hasErrors('imagen')}"
-               th:errors="*{imagen}">
+            <input type="text" th:field="*{imagen}" placeholder="piensos/pienso_perro.jpg">
+            <p th:if="${#fields.hasErrors('imagen')}" th:errors="*{imagen}">
             </p>
 
+            <label>Categoría</label>
+            <select th:field="*{categoria}">
+               <option value="">-- Seleccionar --</option>
+               <option value="piensos">Piensos</option>
+               <option value="collares">Collares</option>
+            </select>
+
             <button type="submit" class="btn-detalle">
-                Guardar producto
+               Guardar producto
             </button>
 
-        </form>
+         </form>
 
-    </div>
+      </div>
 
-</section>
+   </section>
 
-<div th:replace="fragments/footer :: footer"></div>
+   <div th:replace="fragments/footer :: footer"></div>
 
 </body>
+
 </html>
