--- a/ClinicaVeterinaria/src/main/resources/templates/detalle-producto.html
+++ b/ClinicaVeterinaria/src/main/resources/templates/detalle-producto.html
@@ -14,13 +14,13 @@
 <div th:replace="fragments/header :: header"></div>
 
 <section class="section white">
-    <div class="container">
+    <div class="detalle-container">
 
-        <div class="card">
+        <div class="detalle-card">
 
             <img th:src="@{/img/productos/{ruta}(ruta=${producto.imagen})}"
                  alt="Imagen del producto"
-                 class="producto-img">
+                 class="detalle-producto-img">
 
             <h2 th:text="${producto.nombre}">Nombre</h2>
 
